Login funktioniert und Token wird erstellt.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,20 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Login Seite</title>
-
 </head>
 
 <body>
     <div class="login-container">
         <h2>Login</h2>
-        <form action="Echoinput.html" method="GET">
-            <input type="text" name="name" placeholder="Benutzername" required autocomplete="false">
+        <form id="loginForm">
+            <input type="text" name="name" placeholder="Benutzername" required autocomplete="off">
             <input type="password" name="password" placeholder="Passwort" required>
             <input type="submit" value="Einloggen">
         </form>
+        <div id="message"></div>
     </div>
-</body>
 
-<script src="script/home.js"></script>
+    <script>
+        document.getElementById('loginForm').addEventListener('submit', async function(event) {
+            event.preventDefault(); 
+            const formData = new FormData(event.target);
+            const data = {
+                name: formData.get('name'),
+                password: formData.get('password')
+            };
+            try {
+                const response = await fetch('http://localhost:3000/api/login/', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(data)
+                });
+
+                if (!response.ok) {
+                    throw new Error(`Error: ${response.statusText}`);
+                }1111111
+                const result = await response.json();
+                console.log('Success:', result);
+                document.getElementById('message').textContent = 'Login erfolgreich!';
+                localStorage.setItem('access_token', result.access_token);
+            } catch (error) {
+                console.error('Error:', error);
+                document.getElementById('message').textContent = 'Verbindung zum Server fehlgeschlagen.';
+            }
+        });
+    </script>
+</body>
 
 </html>
