--- a/frontend/Echoinput.html
+++ b/frontend/Echoinput.html
@@ -5,40 +5,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XSS Test Seite</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="Styling/echostyle.css">
 </head>
 
 <body>
-    <h1>XSS Test Seite</h1>
-    <form action="Echoinput.html" method="GET">
-        <label for="user-input">Geben Sie etwas ein:</label>
-        <input type="text" id="user-input" name="input">
-        <button type="submit" id="btn-submit">Abschicken</button>
+    <nav class="navbar navbar-dark bg-danger fixed-top">
+        <div class="container">
+            <a class="navbar-brand">Navbar</a>
+            <ul class="navbar-nav flex-row">
+                <li class="nav-item active">
+                    <a class="nav-link" href="Profile.html">Home</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-    </form>
 
-    <div id="output">
-        <p>Sie haben eingegeben: <span id="user-output"></span></p>
-    </div>
+    <div class="container mt-5">
+        <form action="Echoinput.html" method="GET">
+            <div class="mb-3">
+                <label for="user-input" class="form-label">Geben Sie etwas ein:</label>
+                <input type="text" class="form-control" id="user-input" name="input">
+            </div>
+            <button type="submit" class="btn btn-primary">Abschicken</button>
+        </form>
 
-    <div id="logout">
-        <button type="submit" id="delete-jwt">Abmelden</button>
+        <div id="output" class="mt-4">
+            <p>Sie haben eingegeben: <span id="user-output"></span></p>
+        </div>
+
+        <div id="logout" class="mt-4">
+            <button type="button" class="btn btn-danger" id="delete-jwt">Abmelden</button>
+        </div>
     </div>
 
     <script>
-        window.onload = () => { 
-            if(!document.cookie){
-                document.cookie = 'user=uniqueUserId' + 1 + '; path=/;';
-            }
-        }
         const params = new URLSearchParams(window.location.search);
         const userInput = params.get('input');
         if (userInput) {
             document.getElementById('user-output').innerHTML = userInput;
+            // Zum Sauber machen der Suchleiste
+            // params.delete('input');
+            // const newUrl = window.location.pathname;
+            // window.history.replaceState({}, '', newUrl);
         }
-
         document.getElementById('delete-jwt').addEventListener('click', () => {
-
+            document.cookie = 'jwt=; max-age=0; path=/';
             window.location.href = '/';
         });
 
