--- a/frontend/Echoinput.html
+++ b/frontend/Echoinput.html
@@ -8,37 +8,40 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="Styling/echostyle.css">
+    <link rel="stylesheet" href="Styling/navbar.css"> 
 </head>
 
 <body>
-    <nav class="navbar navbar-dark bg-danger fixed-top">
-        <div class="container">
-            <a class="navbar-brand">Navbar</a>
-            <ul class="navbar-nav flex-row">
-                <li class="nav-item active">
-                    <a class="nav-link" href="Profile.html">Home</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="Profile.html" target="_parent">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="Echoinput.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Profile.html">Profile</a>
+        </li>
+      </ul>
+      <button type="button" class="btn btn-danger" id="delete-jwt">Abmelden</button>
+    </div>
+  </nav>
 
     <div class="container mt-5">
+      <h1>Wilkommen auf meiner Testseite</h1>
         <form action="Echoinput.html" method="GET">
-            <div class="mb-3">
+            <div id="userInput" class="mb-3">
                 <label for="user-input" class="form-label">Geben Sie etwas ein:</label>
                 <input type="text" class="form-control" id="user-input" name="input">
+                <p>Sie haben eingegeben: <span id="user-output"></span></p>
             </div>
             <button type="submit" class="btn btn-primary">Abschicken</button>
         </form>
-
-        <div id="output" class="mt-4">
-            <p>Sie haben eingegeben: <span id="user-output"></span></p>
-        </div>
-
-        <div id="logout" class="mt-4">
-            <button type="button" class="btn btn-danger" id="delete-jwt">Abmelden</button>
-        </div>
+    
+           
     </div>
 
     <script>
@@ -46,16 +49,13 @@
         const userInput = params.get('input');
         if (userInput) {
             document.getElementById('user-output').innerHTML = userInput;
-            // Zum Sauber machen der Suchleiste
-            // params.delete('input');
-            // const newUrl = window.location.pathname;
-            // window.history.replaceState({}, '', newUrl);
+        }else{
+          document.getElementById('user-output').innerHTML = "Kein Input.";
         }
         document.getElementById('delete-jwt').addEventListener('click', () => {
             document.cookie = 'jwt=; max-age=0; path=/';
             window.location.href = '/';
         });
-
     </script>
 </body>
 
