--- a/frontend/Profile.html
+++ b/frontend/Profile.html
@@ -2,50 +2,91 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Profile</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>User Profile</title>
 
-    <link rel="stylesheet" href="Styling/profile.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="Styling/profile.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="Styling/navbar.css">
+  <link rel="stylesheet" href="Styling/profile.css">
 </head>
 
 <body>
-    <iframe src="navbar.html" frameborder="0" width="100%" height="mr-auto"></iframe>
-
-    <div class="container">
-        <h1>User Profile</h1>
-        <Alert id="message"></Alert>
-        <div class="profile-info">
-            <img src="profile-picture.jpg" alt="Profile Picture">
-            <div class="user-details">
-                <h2>John Doe</h2>
-                <p>Email: johndoe@example.com</p>
-                <p>Location: New York City</p>
-                <p>Age: 30</p>
-            </div>
-        </div>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="Profile.html" target="_parent">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="Echoinput.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Profile.html">Profile</a>
+        </li>
+      </ul>
+      <button type="button" class="btn btn-danger" id="delete-jwt">Abmelden</button>
     </div>
-    <script>
-        try {
-            const response = await fetch('http://localhost:3000/api/login/', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(data)
-            });
+  </nav>
+  <div class="container mt-5">
+    <h1>User Profile</h1>
+    <Alert id="message"></Alert>
+    <div class="profile-info">
+      <div class="user-details">
+        <p id="user-id"></p>
+        <p id="user-name"></p>
+        <p id="user-role"></p>
+      </div>
+    </div>
+  </div>
 
-            if (!response.ok) {
-                throw new Error(`${response.statusText}`);
-            }
-            const result = await response.json();
-        } catch (error) {
-            console.error('Error:', error);
-            document.getElementById('message').textContent = 'Verbindung zum Server fehlgeschlagen.';
+  
+  <script>
+    const parseJwt = (token) => {
+      try {
+        return JSON.parse(atob(token.split('.')[1]));
+      } catch (e) {
+        return null;
+      }
+    };
+    document.addEventListener('DOMContentLoaded', async () => {
+      try {
+        const cookie = document.cookie
+        const jwt = cookie.substring("jwt=".length)
+        console.log(jwt)
+        const decode = parseJwt(jwt)
+
+        const response = await fetch(`http://localhost:3000/api/user/finde/${decode.sub}`, {
+          method: 'GET',
+          headers: {
+            "Authorization": `Bearer ${jwt}`,
+            "Content-Type": "application/json"
+          },
+        });
+
+        if (!response.ok) {
+          throw new Error(`${response.statusText}`);
         }
-    </script>
+
+        const result = await response.json();
+        console.log(result)
+
+        // Nehmen wir an, result enthält die Benutzerdaten
+        document.getElementById('user-id').textContent = `id: ${result.id}`;
+        document.getElementById('user-name').textContent = `Name: ${result.name}`;
+        document.getElementById('user-role').textContent = `Role: ${result.admin ? "Admin" : "User"}`;
+        document.getElementById('user-role').textContent = `Erstellt am: ${new Date(result.createdAt).toUTCString()}`;
+
+      } catch (error) {
+        console.error('Error:', error);
+        document.getElementById('message').textContent = 'Verbindung zum Server fehlgeschlagen.';
+      }
+    });
+  </script>
 </body>
 
 </html>
