Bio als eigenschaft hinzugefügt.

--- a/frontend/Profile.html
+++ b/frontend/Profile.html
@@ -40,6 +40,7 @@
         <p id="user-id"></p>
         <p id="user-name"></p>
         <p id="user-role"></p>
+        <p id="user-bio" type:>Bio: Keine Bio.</p>
       </div>
     </div>
   </div>
