--- a/frontend/Profile.html
+++ b/frontend/Profile.html
@@ -18,7 +18,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="Profile.html" target="_parent">Navbar</a>
+    <a class="navbar-brand" href="Echoinput.html" target="_parent">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -45,14 +45,11 @@
         <p id="name"></p>
         <p id="role"></p>
         <p id="created"></p>
-        <p id="bio">Bio: Keine Bio.</p>
+        <p id="bio"></p>
       </div>
-
     </div>
     <button id="save-button" class="btn btn-primary">Speichern</button>
   </div>
-
-
 
 
   <script>
@@ -156,7 +153,7 @@
           p.textContent = input.value;
           p.id = input.id
           if (input.id === "name") {
-            p.textContent = "Name: " + input.value
+            p.textContent = "Name: " + input.value 
           } else {
             p.textContent = "Bio: " + input.value
           }
