--- a/frontend/index.html
+++ b/frontend/index.html
@@ -60,7 +60,7 @@
 
             } catch (error) {
                 console.error('Error:', error);
-                document.getElementById('message').textContent = 'Verbindung zum Server fehlgeschlagen.';
+                document.getElementById('message').textContent = 'Falsche Login Daten.';
             }
         });
     </script>
