--- a/frontend/Echoinput.html
+++ b/frontend/Echoinput.html
@@ -33,20 +33,55 @@
 
   <div class="container mt-5">
     <h1>Wilkommen auf meiner Testseite</h1>
+
+    <div id="userInput" class="mb-3">
+      <div class="input-group mb-3">
+        <h3>Suchen Sie etwas🔍</h3>
+        <input type="search" class="form-control" placeholder="Search for User...🔍" aria-label="Search" name="query"
+          id="search">
+        <button class="btn btn-primary" id="search-submit" type="submit">Search</button>
+      </div>
+      </form>
+      <div id="search-results"></div>
+    </div>
+
     <form action="Echoinput.html">
       <div id="userInput" class="mb-3">
-        <label for="user-input" class="form-label">Geben Sie etwas ein:</label>
+        <h3>Geben Sie etwas ein!⌨</h3>
         <input type="text" class="form-control" id="user-input" name="input">
         <p>Sie haben eingegeben: <span id="user-output"></span></p>
+        <button type="submit" class="btn btn-primary">Abschicken</button>
+        <div id="search-results"></div>
       </div>
-      <button type="submit" class="btn btn-primary">Abschicken</button>
+
     </form>
-
-
   </div>
   <script src="./script/checkJWT.js"></script>
-
   <script>
+
+    document.getElementById('search').addEventListener('input', function () {
+      const query = this.value;
+      const cookie = document.cookie
+      const jwt = cookie.substring("jwt=".length)
+      if (query.length > 0) {
+        fetch(`/api/user/search?query=${query}`, {
+          method: 'GET',
+          headers: {
+            "Authorization": `Bearer ${jwt}`,
+            "Content-Type": "application/json"
+          },
+        })
+          .then(response => response.json())
+          .then(data => {
+            const resultsContainer = document.getElementById('search-results');
+            resultsContainer.innerHTML = '<ul>' + data.map(user => `<li><a href="Profile.html?id=${user.id}">${user.name}</a></li>`) + '</ul>';
+          })
+          .catch(error => console.error('Error fetching search results:', error));
+      } else {
+        document.getElementById('search-results').innerHTML = 'Kein User gefunden.';
+      }
+    });
+
     const params = new URLSearchParams(window.location.search);
     const userInput = params.get('input');
     if (userInput) {
