Kommentarsektion mit der Möglichkeit PDF/SVG zu Uploaden.

--- a/frontend/Echoinput.html
+++ b/frontend/Echoinput.html
@@ -26,6 +26,9 @@
         <li class="nav-item">
           <a class="nav-link" href="Profile.html">Profile</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Commentsection.html">Kommentare</a>
+        </li>
       </ul>
       <button type="button" class="btn btn-danger" id="delete-jwt">Abmelden</button>
     </div>
