--- a/frontend/Search.html
+++ b/frontend/Search.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="Profile.html">Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Community.html">Community</a>
+                    <a class="nav-link" href="Community.html?">Community</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="Search.html">Search</a>
