--- a/frontend/Echoinput.html
+++ b/frontend/Echoinput.html
@@ -7,8 +7,10 @@
   <title>XSS Test Seite</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/dompurify@2.4.0/dist/purify.min.js"></script>
   <link rel="stylesheet" href="Styling/echostyle.css">
   <link rel="stylesheet" href="Styling/navbar.css">
+
 </head>
 
 <body>
@@ -62,6 +64,8 @@
     </form>
 
   </div>
+
+
   <script src="./script/checkJWT.js"></script>
 
   <script>
@@ -93,20 +97,14 @@
     const params = new URLSearchParams(window.location.search);
     // Entnehme den Parameter mit den Namen input 
     const userInput = params.get('input');
-    // Ist der Paramater vorhanden, so füge den Text in user-output
+    // Ist der Paramater vorhanden, so füge den Text in user-output und reinige diesen   
     if (userInput) {
-      document.getElementById('user-output').innerHTML = userInput;
+      document.getElementById('user-output').innerHTML = DOMPurify.sanitize(userInput);
       // ansonsten gib "kein Input" zurück
     } else {
       document.getElementById('user-output').innerHTML = "Kein Input.";
     }
 
-
-
-    document.getElementById('delete-jwt').addEventListener('click', () => {
-      document.cookie = 'jwt=; max-age=0; path=/';
-      window.location.href = '/';
-    });
   </script>
 </body>
 
