--- a/frontend/Community.html
+++ b/frontend/Community.html
@@ -7,6 +7,7 @@
     <title>Kommentar-Seite</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/dompurify@2.4.0/dist/purify.min.js"></script>
     <link rel="stylesheet" href="Styling/navbar.css">
 </head>
 
@@ -64,6 +65,9 @@
         document.addEventListener('DOMContentLoaded', function () {
             loadFiles()
         });
+
+
+
         function loadFiles() {
             fetch('/api/user/uploaded_files', {
                 headers: {
@@ -76,26 +80,43 @@
                     const pdfList = document.getElementById('pdf-list');
                     svgList.innerHTML = '';
                     pdfList.innerHTML = '';
+
                     files.forEach(file => {
-                        if (file.endsWith('.svg')) {
-                            const svgItem = document.createElement('div');
-                            svgItem.className = 'list-group-item list-group-item-action';
-                            svgItem.innerHTML = `<object type="image/svg+xml" data="/uploads/${file}" width="300" height="300"></object>`;
-                            svgItem.setAttribute('download', file)
-                    
-                            svgList.appendChild(svgItem);
-                        } else {
+
+                        const cleanFileName = DOMPurify.sanitize(file);
+
+                        if (cleanFileName.endsWith('.svg')) {
+                            // SVG-Datei abrufen und den Inhalt bereinigen
+                            fetch('/uploads/' + cleanFileName)
+                                // Response in Text umwandeln zum bereinigen.
+                                .then(response => response.text())
+                                .then(svgContent => {
+                                    // SVG-Inhalt bereinigen
+                                    const cleanSVGContent = DOMPurify.sanitize(svgContent, {
+                                        USE_PROFILES: { svg: true }
+                                    });
+                                    // Bereinigten SVG-Inhalt direkt ins DOM einfügen
+                                    const svgItem = document.createElement('div');
+                                    svgItem.className = 'list-group-item list-group-item-action';
+                                    // Bereinigtes SVG wird direkt eingefügt
+                                    svgItem.innerHTML = cleanSVGContent;
+                                    svgList.appendChild(svgItem);
+                                })
+                                .catch(error => {
+                                    console.error('Fehler beim Laden der SVG-Datei:', error);
+                                });
+                        } else if (cleanFileName.endsWith('.pdf')) {
                             const pdfItem = document.createElement('a');
-                            pdfItem.href = '/uploads/' + file;
+                            pdfItem.href = '/uploads/' + cleanFileName;
                             pdfItem.className = 'list-group-item list-group-item-action';
-                            pdfItem.textContent = file;
-                            pdfItem.setAttribute('download', file);
+                            pdfItem.textContent = cleanFileName;
+                            pdfItem.setAttribute('download', cleanFileName);
                             pdfList.appendChild(pdfItem);
                         }
                     });
                 })
                 .catch(error => {
-                    console.error('Error:', error + response.status());
+                    console.error('Fehler beim Laden der Dateien:', error);
                 });
         }
 
@@ -111,6 +132,7 @@
             event.preventDefault();
             const form = document.getElementById('upload-form');
             const formData = new FormData(form);
+            DOMPurify.sanitize(formData)
             const cookie = document.cookie
             let jwt = cookie.substring("jwt=".length)
 
