--- a/frontend/Search.html
+++ b/frontend/Search.html
@@ -7,6 +7,8 @@
     <title>XSS Test Seite</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/dompurify@2.4.0/dist/purify.min.js"></script>
+
     <link rel="stylesheet" href="Styling/echostyle.css">
     <link rel="stylesheet" href="Styling/navbar.css">
 </head>
@@ -60,7 +62,6 @@
     <script src="./script/checkJWT.js"></script>
     <script>
         async function searchDocuments(query) {
-
             const cookie = document.cookie;
             const jwt = cookie.substring("jwt=".length);
 
@@ -74,7 +75,7 @@
                 });
                 const files = await response.json();
 
-                if ( files.message !== null && files.message !== undefined) {
+                if (files.message !== null && files.message !== undefined) {
                     document.getElementById('error-msg').innerHTML = `<b>${files.message}</b>`;
                     return;
                 } else {
@@ -84,18 +85,34 @@
                     pdfList.innerHTML = '';
 
                     files.forEach(file => {
-                        if (file.endsWith('.svg')) {
-                            const svgItem = document.createElement('div');
-                            svgItem.className = 'list-group-item list-group-item-action';
-                            svgItem.innerHTML = `<object type="image/svg+xml" data="/uploads/${file}" width="300" height="300"></object>`;
-                            svgItem.setAttribute('download', file);
-                            svgList.appendChild(svgItem);
-                        } else {
+                        const cleanFileName = DOMPurify.sanitize(file);
+
+                        if (cleanFileName.endsWith('.svg')) {
+                            // SVG-Datei abrufen und den Inhalt bereinigen
+                            fetch('/uploads/' + cleanFileName)
+                                // Response in Text umwandeln zum bereinigen.
+                                .then(response => response.text())
+                                .then(svgContent => {
+                                    // SVG-Inhalt bereinigen
+                                    const cleanSVGContent = DOMPurify.sanitize(svgContent, {
+                                        USE_PROFILES: { svg: true }
+                                    });
+                                    // Bereinigten SVG-Inhalt direkt ins DOM einfügen
+                                    const svgItem = document.createElement('div');
+                                    svgItem.className = 'list-group-item list-group-item-action';
+                                    // Bereinigtes SVG wird direkt eingefügt
+                                    svgItem.innerHTML = cleanSVGContent;
+                                    svgList.appendChild(svgItem);
+                                })
+                                .catch(error => {
+                                    console.error('Fehler beim Laden der SVG-Datei:', error);
+                                });
+                        } else if (cleanFileName.endsWith('.pdf')) {
                             const pdfItem = document.createElement('a');
-                            pdfItem.href = '/uploads/' + file;
+                            pdfItem.href = '/uploads/' + cleanFileName;
                             pdfItem.className = 'list-group-item list-group-item-action';
-                            pdfItem.textContent = file;
-                            pdfItem.setAttribute('download', file);
+                            pdfItem.textContent = cleanFileName;
+                            pdfItem.setAttribute('download', cleanFileName);
                             pdfList.appendChild(pdfItem);
                         }
                     });
@@ -108,13 +125,14 @@
         document.getElementById('search-submit').addEventListener('click', function () {
             const query = document.getElementById('search').value;
             if (query.length > 0) {
-                // Aktualisiere die URL mit dem query-Parameter
+                // Bereinigen der Query
+                const cleanQuery = DOMPurify.sanitize(query);
                 const newUrl = new URL(window.location);
-                newUrl.searchParams.set('query', query);
+                newUrl.searchParams.set('query', cleanQuery);
                 window.history.pushState({}, '', newUrl);
 
-                // Führe die Suchanfrage aus
-                searchDocuments(query);
+                // Führe die Suchanfrage mit der bereinigten Query aus
+                searchDocuments(cleanQuery);
             }
         });
 
@@ -122,8 +140,11 @@
             const params = new URLSearchParams(window.location.search);
             const query = params.get('query');
             if (query) {
-                document.getElementById('search').value = query;
-                searchDocuments(query);
+                // Bereinigen der Query
+                const clean = DOMPurify.sanitize(query);
+                document.getElementById('search').value = clean;
+                params.set('query', clean)
+                searchDocuments(clean);
             }
         });
     </script>
