--- a/frontend/Community.html
+++ b/frontend/Community.html
@@ -60,6 +60,9 @@
 
     </div>
 
+
+    <script src="./script/checkJWT.js"></script>
+
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             loadFiles()
