--- a/frontend/Profile.html
+++ b/frontend/Profile.html
@@ -62,6 +62,8 @@
   </div>
 
   <script src="./script/checkJWT.js"></script>
+  <script src="./script/logout.js"></script>
+
   <script>
     // Funktion zum Parsen des JWT und Dekodieren des Payloads
     const parseJwt = (token) => {
