--- a/frontend/Search.html
+++ b/frontend/Search.html
@@ -60,6 +60,8 @@
     </div>
 
     <script src="./script/checkJWT.js"></script>
+    <script src="./script/logout.js"></script>
+
     <script>
         async function searchDocuments(query) {
             const cookie = document.cookie;
