--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,7 +28,7 @@
             }
         };
 
-        document.getElementById('login-btn').addEventListener('submit', async function (event) {
+        document.getElementById('loginForm').addEventListener('submit', async function (event) {
             event.preventDefault();
             const formData = new FormData(event.target);
             const data = {
